SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/CPQ_Playbook_Rule_Action__c.object-meta.xml
<CustomObject>
    <description>Action to be run upon successful Rule evaluation</description>
    <label>CPQ Playbook Rule Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>