SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of action to be performed</description>
    <inlineHelpText>Type of action to be performed on question, question group or product</inlineHelpText>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjust question field</fullName>
            </value>
            <value>
                <fullName>Adjust question group field</fullName>
            </value>
            <value>
                <fullName>Add product</fullName>
            </value>
            <value>
                <fullName>Adjust product field</fullName>
            </value>
            <value>
                <fullName>Adjust product field editability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>