SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <description>How to determine calculated value if Value Source Type is &apos;Dynamic&apos;</description>
    <inlineHelpText>How to determine calculated value if Value Source Type is &apos;Dynamic&apos;</inlineHelpText>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Subtract</fullName>
            </value>
            <value>
                <fullName>Multiply</fullName>
            </value>
            <value>
                <fullName>Divide</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>