SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/CPQ_Playbook_Question_Group__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Question_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CPQ Playbook Question Group to be acted upon</description>
    <inlineHelpText>Playbook Question Group to be acted upon</inlineHelpText>
    <label>CPQ Playbook Question Group</label>
    <referenceTo>CPQ_Playbook_Question_Group__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Actions</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>