SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/CPQ_Playbook_Rule__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Rule__c</fullName>
    <description>CPQ Playbook Rule in which Action is executed</description>
    <inlineHelpText>Playbook Rule in which Action is executed</inlineHelpText>
    <label>CPQ Playbook Rule</label>
    <referenceTo>CPQ_Playbook_Rule__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Actions</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>