SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Field_Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If field type is &apos;Boolean&apos;, new value stored here</description>
    <inlineHelpText>If field type is &apos;Boolean&apos;, new value stored here</inlineHelpText>
    <label>Field value (Boolean)</label>
    <type>Checkbox</type>
</CustomField>