SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Field_Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Currency__c</fullName>
    <description>If field type is &apos;Currency&apos;, new value stored here</description>
    <inlineHelpText>If field type is &apos;Currency&apos;, new value stored here</inlineHelpText>
    <label>Field Value (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>