SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Field_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Date__c</fullName>
    <description>If field type is &apos;Date&apos;, new value stored here</description>
    <inlineHelpText>If field type is &apos;Date&apos;, new value stored here</inlineHelpText>
    <label>Field Value (Date)</label>
    <type>Date</type>
</CustomField>