SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Field_Value_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Decimal__c</fullName>
    <description>If field type is &apos;Decimal&apos;, new value stored here</description>
    <inlineHelpText>If field type is &apos;Decimal&apos;, new value stored here</inlineHelpText>
    <label>Field Value (Decimal)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>