SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Field_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Text__c</fullName>
    <description>If field type is &apos;Text&apos;, new value stored here</description>
    <inlineHelpText>If field type is &apos;Text&apos;, new value stored here</inlineHelpText>
    <label>Field Value (Text)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>