SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Numeric_Math_Operator__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Math_Operator__c</fullName>
    <description>If populated, Math operation to be performed on calculated value for Numeric Calculations</description>
    <inlineHelpText>If populated, Math operation to be performed on calculated value for Numeric Calculations</inlineHelpText>
    <label>Numberic Math Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Ceiling</fullName>
            </value>
            <value>
                <fullName>Truncate</fullName>
            </value>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Absolute Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>