SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product2 record that will be acted upon</description>
    <inlineHelpText>Product2 record that will be acted upon</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Actions</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>