SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Product_Adjustment_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Adjustment_Field__c</fullName>
    <description>Field on product that should be adjusted. Valid options include &apos;Quantity&apos;, &apos;Unit_Price&apos;, &apos;List_Price&apos;, &apos;Start_Date&apos;, &apos;End_Date&apos;, &apos;Quantity_Editable&apos;, &apos;Dates_Editable&apos;, &apos;Discountable&apos;, &apos;List_Price_Editable&apos;, &apos;Manually_Addible&apos;, and &apos;Removable&apos; for CPQ value adjustments. Alternatively, any QuoteLineItem field API name can be placed here and it will be saved to the product&apos;s QuoteLineItem record upon CPQ save.</description>
    <inlineHelpText>Field on product that should be adjusted. Valid options include &apos;Quantity&apos;, &apos;Unit_Price&apos;, &apos;List_Price&apos;, &apos;Start_Date&apos;, &apos;End_Date&apos;, &apos;Quantity_Editable&apos;, &apos;Dates_Editable&apos;, &apos;Discountable&apos;, &apos;List_Price_Editable&apos;, &apos;Manually_Addible&apos;, and &apos;Removable&apos; for CPQ value adjustments. Alternatively, any QuoteLineItem field API name can be placed here and it will be saved to the product&apos;s QuoteLineItem record upon CPQ save.</inlineHelpText>
    <label>Product Adjustment Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>