SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Product_Adjustment_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Adjustment_Field_Type__c</fullName>
    <description>Type of field the Product Adjustment Field represents</description>
    <inlineHelpText>Type of field the Product Adjustment Field represents</inlineHelpText>
    <label>Product Adjustment Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>