SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Product_Adjustment_Target_Rule_Action__c.field-meta.xml
<CustomField>
    <fullName>Product_Adjustment_Target_Rule_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If populated, the product adjustment will only be applied to the desired product added by the action specified here. If not populated, all occurances of the desired product will be adjusted.</description>
    <inlineHelpText>If populated, the product adjustment will only be applied to the desired product added by the action specified here. If not populated, all occurances of the desired product will be adjusted.</inlineHelpText>
    <label>Product Adjustment Target Rule Action</label>
    <referenceTo>CPQ_Playbook_Rule_Action__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Actions</relationshipLabel>
    <relationshipName>Product_Adjustment_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>