SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Product_Field_Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Product_Field_Value_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If product field type is &apos;Boolean&apos; and Action Type is &apos;Adjust product field&apos;, new value for product field stored here</description>
    <inlineHelpText>If product field type is &apos;Boolean&apos; and Action Type is &apos;Adjust product field&apos;, new value for product field stored here</inlineHelpText>
    <label>Product Field Value (Boolean)</label>
    <type>Checkbox</type>
</CustomField>