SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Product_Field_Value_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Product_Field_Value_Decimal__c</fullName>
    <description>If product field type is &apos;Decimal&apos; and Action Type is &apos;Adjust product field&apos;, new value for product field stored here</description>
    <inlineHelpText>If product field type is &apos;Decimal&apos; and Action Type is &apos;Adjust product field&apos;, new value for product field stored here</inlineHelpText>
    <label>Product Field Value (Decimal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>