SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Product_Field_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Field_Value_Text__c</fullName>
    <description>If product field type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos; and Action Type is &apos;Adjust product field&apos;, new value for product field stored here</description>
    <inlineHelpText>If product field type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos; and Action Type is &apos;Adjust product field&apos;, new value for product field stored here</inlineHelpText>
    <label>Product Field Value (Text)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>