SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Question_Adjustment_Field__c.field-meta.xml
<CustomField>
    <fullName>Question_Adjustment_Field__c</fullName>
    <description>Field on question that should be adjusted</description>
    <inlineHelpText>Field on question that should be adjusted</inlineHelpText>
    <label>Question Adjustment Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>answer</fullName>
            </value>
            <value>
                <fullName>IsHidden__c</fullName>
            </value>
            <value>
                <fullName>IsRequired__c</fullName>
            </value>
            <value>
                <fullName>IsReadOnly__c</fullName>
            </value>
            <value>
                <fullName>Picklist_Answers__c</fullName>
            </value>
            <value>
                <fullName>Minimum_Value__c</fullName>
            </value>
            <value>
                <fullName>Maximum_Value__c</fullName>
            </value>
            <value>
                <fullName>Step_Value__c</fullName>
            </value>
            <value>
                <fullName>Quote_Save_Field__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>