SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Question_Field_Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Value_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If related question field type is &apos;Boolean&apos;, new value stored here</description>
    <inlineHelpText>If related question field type is &apos;Boolean&apos;, new value stored here</inlineHelpText>
    <label>Question Field value (Boolean)</label>
    <type>Checkbox</type>
</CustomField>