SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Question_Field_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Value_Date__c</fullName>
    <description>If related question field type is &apos;Date&apos;, new value stored here</description>
    <inlineHelpText>If related question field type is &apos;Date&apos;, new value stored here</inlineHelpText>
    <label>Question Field Value (Date)</label>
    <type>Date</type>
</CustomField>