SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Question_Field_Value_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Value_Decimal__c</fullName>
    <description>If related question field type is &apos;Decimal&apos;, new value stored here</description>
    <inlineHelpText>If related question field type is &apos;Decimal&apos;, new value stored here</inlineHelpText>
    <label>Question Field Value (Decimal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>