SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Question_Field_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Value_Text__c</fullName>
    <description>If related question field type is &apos;Text&apos;, new value stored here</description>
    <inlineHelpText>If related question field type is &apos;Text&apos;, new value stored here</inlineHelpText>
    <label>Question Field Value (Text)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>