SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Question_Group_Adjustment_Field__c.field-meta.xml
<CustomField>
    <fullName>Question_Group_Adjustment_Field__c</fullName>
    <description>Field on question group that should be adjusted</description>
    <inlineHelpText>Field on question group that should be adjusted</inlineHelpText>
    <label>Question Group Adjustment Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IsHidden__c</fullName>
                <label>Is Hidden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>