SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/System_Value__c.field-meta.xml
<CustomField>
    <fullName>System_Value__c</fullName>
    <description>System Value to be updated</description>
    <inlineHelpText>System Value to be updated</inlineHelpText>
    <label>System Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Start Date</fullName>
            </value>
            <value>
                <fullName>Quote Start Date Editable</fullName>
            </value>
            <value>
                <fullName>Quote Term</fullName>
            </value>
            <value>
                <fullName>Quote Term Editable</fullName>
            </value>
            <value>
                <fullName>Quote End Date</fullName>
            </value>
            <value>
                <fullName>Quote End Date Editable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>