SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/fields/Value_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Source_Type__c</fullName>
    <description>How new value will be determined</description>
    <inlineHelpText>Static sources use unchanging values input in the action fields. Dynamic sources use other question/product values as calculation items</inlineHelpText>
    <label>Value Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>