SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Action__c/validationRules/Question_OR_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Question_OR_Group</fullName>
    <active>true</active>
    <description>Restrict Action to act upon a Question or Group, not both</description>
    <errorConditionFormula>AND(
 CPQ_Playbook_Question__c != Null,
 CPQ_Playbook_Question_Group__c != Null
)</errorConditionFormula>
    <errorMessage>An Action can only be associated to a Question or a Group, not both</errorMessage>
</ValidationRule>